[package]
name = "micro-quest"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.27.2"
env_logger = "0.11.6"
iced = { version = "0.13.1", features = ["markdown", "tokio"] }
iced_aw = { version = "0.12.0", default-features = false, features = ["badge", "card", "selection_list", "tab_bar", "tabs", "menu", "quad", "sidebar", "spinner"] }
log = "0.4.26"
schemars = "0.8.21"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"
